<resources>
    <string name="app_name">CheckList</string>
    <string name="settings">Настройки</string>
    <string name="note">Заметки</string>
    <string name="item">Дела</string>
    <string name="new_note">Добавить</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="save">Сохранить</string>
    <string name="no_notes">Нет заметок</string>
    <string name="bold">bold</string>
    <string name="color">color</string>
    <string name="new_list">Создать новый список</string>
    <string name="create">Создать</string>
    <string name="do_u_wanna_delete">Вы действительно хотите удалить этот список дел?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="update">Обновить</string>
    <string name="delete_list">Удалить список</string>
    <string name="clear_list">Очистить список</string>
    <string name="share_list">Поделиться списком</string>
    <string name="add">Добавить</string>
    <string name="the_list_is_empty">Список пуст</string>
    <string name="edit_item">Редактировать ячейку</string>
    <string name="title">Заголовок</string>
    <string name="general_settings">Общие настройки</string>
    <string name="note_style">Стиль заметок</string>
    <string name="time_formatter">Формат времени</string>
    <string name="remove_ad">Удалить рекламу</string>
    <string name="remove_ad_summary">Удалить всю рекламу приложения(100 рублей)</string>
    <string name="topic">Тема</string>
    <string name="text_size">Размер текста</string>
    <string name="chose_topic">Выберите тему</string>
    <string name="title_size">Размер заголовка</string>
    <string name="description_size">Размер описания</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_out">Выйти</string>
    <string name="account">Аккаунт</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="registration">Регистрация</string>
    <string name="entrance">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_in_or_sign_up">Войдите или зарегистрируйтесь</string>
    <string name="fill_fields">Заполните обязательные поля!</string>
    <string name="enter_mistake">Неправильно введён логин или пароль</string>
    <string name="letter_sent">Письмо отправлено</string>
    <string name="letter_mistake">Не удалось отправить письмо</string>
    <string name="entrance_correct">Вход выполнен успешно!</string>
</resources>